--- a/KinectFittingRoom/KinectFittingRoom/Properties/Resources.resx
+++ b/KinectFittingRoom/KinectFittingRoom/Properties/Resources.resx
@@ -151,4 +151,16 @@
   <data name="hat_superman" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Models\hat_superman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="glasses_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Models\glasses_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="glasses_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Models\glasses_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sunglasses_aviator" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Models\sunglasses_aviator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sunglasses_rayban" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Models\sunglasses_rayban.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
