--- a/KinectFittingRoom/KinectFittingRoom/Properties/Resources.resx
+++ b/KinectFittingRoom/KinectFittingRoom/Properties/Resources.resx
@@ -208,4 +208,7 @@
   <data name="horizontal_arrows_thinner" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\menu\horizontal_arrows_thinner.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="white_dress" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Textures\Dresses\white_dress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
