--- a/KinectFittingRoom/KinectFittingRoom/Properties/Resources.resx
+++ b/KinectFittingRoom/KinectFittingRoom/Properties/Resources.resx
@@ -367,26 +367,8 @@
   <data name="vertical_arrows_smaller" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons\menu\vertical_arrows_smaller.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="white_dress" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\images\dresses\white_dress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="white_dress1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\dresses\white_dress.mtl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="white_dress2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\models\dresses\white_dress.obj;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="long_skirt_violet2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\long_skirt_violet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="dotted_dress" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\images\dresses\dotted_dress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="red_dress" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\images\dresses\red_dress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="violet_dress" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\images\dresses\violet_dress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="arrows_bigger" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons\menu\arrows_bigger.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -417,5 +399,17 @@
   </data>
   <data name="sunglass_violet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\glasses\sunglass_violet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dress_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\dresses\dress_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dress_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\dresses\dress_orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dress_pink" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\dresses\dress_pink.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dress_violet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\dresses\dress_violet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
